--- a/package.json
+++ b/package.json
@@ -5,11 +5,36 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build && next export",
+    "test": "jest"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
+    "dayjs": "^1.9.7",
     "next": "10.0.3",
+    "next-seo": "^4.17.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "^4.1.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.3.1",
+    "@testing-library/cypress": "^7.0.3",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@types/node": "^14.14.14",
+    "@types/react": "^17.0.0",
+    "@types/webpack-env": "^1.16.0",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "autoprefixer": "^10.1.0",
+    "cypress": "^6.1.0",
+    "eslint": "^7.15.0",
+    "eslint-plugin-react": "^7.21.5",
+    "frontmatter-markdown-loader": "^3.6.2",
+    "jest": "^26.6.3",
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.1.3"
   }
 }
