--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,7 +1,6 @@
 backend:
   name: github
-  repo: drewbolles/drewbolles.com # Path to your GitHub repository
-local_backend: true
+  repo: drewbolles/website # Path to your GitHub repository
 media_folder: public/uploads
 public_folder: uploads
 publish_mode: editorial_workflow
