--- a/package.json
+++ b/package.json
@@ -33,8 +33,15 @@
     "eslint": "^7.15.0",
     "eslint-plugin-react": "^7.21.5",
     "frontmatter-markdown-loader": "^3.6.2",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^8.0.0",
     "jest": "^26.6.3",
+    "jimp": "^0.16.1",
+    "next-optimized-images": "^2.6.2",
+    "responsive-loader": "^2.0.0",
     "tailwindcss": "^2.0.2",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "webp-loader": "^0.6.0"
   }
 }
