--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "imagemin-svgo": "^8.0.0",
     "jest": "^26.6.3",
     "jimp": "^0.16.1",
+    "next-manifest": "^3.0.1",
+    "next-offline": "^5.0.3",
     "next-optimized-images": "^2.6.2",
     "responsive-loader": "^2.0.0",
     "tailwindcss": "^2.0.2",
