update offline and manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,9 +8,14 @@
 			"type": "image/png"
 		},
 		{
-			"src": "/android-chrome-256x256.png",
-			"sizes": "256x256",
+			"src": "/android-chrome-512x512.png",
+			"sizes": "512x512",
 			"type": "image/png"
+		},
+		{
+			"src": "/safari-pinned-tab.svg",
+			"type": "image/svg",
+			"purpose": "maskable"
 		}
 	],
 	"start_url": "/?utm_source=web_app_manifest",
