--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -9,5 +9,9 @@ jobs:
       - uses: actions/checkout@v1
       - uses: cypress-io/github-action@v2
         with:
+          start: npm start
+          wait-on: 'http://localhost:3000'
           browser: chrome
           headless: true
+
+
