--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: cypress-io/github-action@v2
         with:
+          build: npm run build
           start: npm start
           wait-on: 'http://localhost:3000'
           browser: chrome
