--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/cypress": "^7.0.3",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
+    "@types/gtag.js": "0.0.3",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/webpack-env": "^1.16.0",
@@ -35,6 +36,7 @@
     "eslint": "^7.15.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "frontmatter-markdown-loader": "^3.6.2",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
