--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next build && next export",
+    "analyze": "ANALYZE=true next build",
     "test": "jest",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --browser chrome --headless --record --key 0edf7fce-9866-4c39-af61-616c9fbc7c63"
@@ -21,6 +22,7 @@
     "react-icons": "^4.1.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^10.0.3",
     "@tailwindcss/typography": "^0.3.1",
     "@testing-library/cypress": "^7.0.3",
     "@testing-library/jest-dom": "^5.11.6",
@@ -43,6 +45,7 @@
     "imagemin-svgo": "^8.0.0",
     "jest": "^26.6.3",
     "jimp": "^0.16.1",
+    "next-compose-plugins": "^2.2.1",
     "next-manifest": "^3.0.1",
     "next-offline": "^4.0.6",
     "next-optimized-images": "^2.6.2",
