--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/cypress": "^7.0.3",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
+    "@types/classnames": "^2.2.11",
     "@types/google.analytics": "0.0.41",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
