--- a/package.json
+++ b/package.json
@@ -47,9 +47,8 @@
     "jest": "^26.6.3",
     "jimp": "^0.16.1",
     "next-compose-plugins": "^2.2.1",
-    "next-manifest": "^3.0.1",
-    "next-offline": "^4.0.6",
     "next-optimized-images": "^2.6.2",
+    "next-pwa": "^5.0.0",
     "responsive-loader": "^2.0.0",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3",
