--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,11 @@
 {
 	"name": "Drew Bolles",
 	"short_name": "Drew Bolles",
+	"start_url": "/",
+	"display": "standalone",
+	"orientation": "natural",
+	"background_color": "#ffffff",
+	"theme_color": "#ffffff",
 	"icons": [
 		{
 			"src": "/android-chrome-192x192.png",
@@ -17,10 +22,5 @@
 			"type": "image/svg",
 			"purpose": "maskable"
 		}
-	],
-	"start_url": "/?utm_source=web_app_manifest",
-	"display": "standalone",
-	"orientation": "natural",
-	"background_color": "#FFFFFF",
-	"theme_color": "#FFFFFF"
+	]
 }
