--- a/package.json
+++ b/package.json
@@ -10,7 +10,21 @@
     "analyze": "ANALYZE=true next build",
     "test": "jest",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run --browser chrome --headless --record --key 0edf7fce-9866-4c39-af61-616c9fbc7c63"
+    "cypress:run": "cypress run --browser chrome --headless --record --key 0edf7fce-9866-4c39-af61-616c9fbc7c63",
+    "type-check": "tsc --pretty --noEmit",
+    "lint": "eslint . --ext ts --ext tsx --ext js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run type-check"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js}": [
+      "npm run lint",
+      "pretty-quick --staged"
+    ]
   },
   "dependencies": {
     "classnames": "^2.2.6",
@@ -41,14 +55,18 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "frontmatter-markdown-loader": "^3.6.2",
+    "husky": "^4.3.6",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^8.0.0",
     "jest": "^26.6.3",
     "jimp": "^0.16.1",
+    "lint-staged": "^10.5.3",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-pwa": "^5.0.0",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "responsive-loader": "^2.0.0",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3",
