--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "autoprefixer": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-transform-require-context": "^0.1.1",
     "cypress": "^6.1.0",
     "eslint": "^7.15.0",
     "eslint-plugin-cypress": "^2.11.2",
@@ -56,6 +58,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "frontmatter-markdown-loader": "^3.6.2",
     "husky": "^4.3.6",
+    "identity-obj-proxy": "^3.0.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^8.0.0",
