--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_STEAM_API_KEY=C46441F71275F4E919CE613A01FC828E
 NEXT_PUBLIC_STEAM_ID=76561198018482804
+NEXT_PUBLIC_AMZN_WISH_LIST_ID=2D50UPCNTIBI4
