--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -32,7 +32,7 @@ collections:
       - {
           label: 'Canonical URL',
           name: 'canonical_url',
-          widget: 'strig',
+          widget: 'string',
           required: false,
         }
   - label: 'Portfolio'
