--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "analyze": "ANALYZE=true next build",
     "test": "jest",
@@ -72,6 +73,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-pwa": "^5.0.0",
+    "next-sitemap": "^1.3.22",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "responsive-loader": "^2.0.0",
