--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "next-sitemap",
+    "postbuild": "next-sitemap && npm run generate-rss-feed",
     "start": "next start",
     "analyze": "ANALYZE=true next build",
     "test": "jest",
@@ -13,7 +13,8 @@
     "cypress:run": "cypress run --browser chrome --headless --record --key 0edf7fce-9866-4c39-af61-616c9fbc7c63",
     "type-check": "tsc --pretty --noEmit",
     "lint": "eslint . --ext ts --ext tsx --ext js",
-    "lint:fix": "eslint . --ext ts --ext tsx --ext js --fix"
+    "lint:fix": "eslint . --ext ts --ext tsx --ext js --fix",
+    "generate-rss-feed": "node rss-gen"
   },
   "husky": {
     "hooks": {
@@ -61,6 +62,7 @@
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "front-matter": "^4.0.2",
     "frontmatter-markdown-loader": "^3.6.2",
     "husky": "^4.3.6",
     "identity-obj-proxy": "^3.0.0",
@@ -77,6 +79,7 @@
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "responsive-loader": "^2.0.0",
+    "rss": "^1.2.2",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3",
     "webp-loader": "^0.6.0"
