--- a/package.json
+++ b/package.json
@@ -75,12 +75,15 @@
     "jest": "^26.6.3",
     "jimp": "^0.16.1",
     "lint-staged": "^10.5.3",
+    "markdown-it": "^12.0.4",
+    "markdown-it-prism": "^2.1.3",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-pwa": "^5.0.0",
     "next-sitemap": "^1.3.22",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
+    "prismjs": "^1.22.0",
     "responsive-loader": "^2.0.0",
     "rss": "^1.2.2",
     "tailwindcss": "^2.0.2",
