--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "dayjs": "^1.9.7",
-    "next": "10.0.3",
+    "next": "^10.0.4",
     "next-seo": "^4.17.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
-    "react-query": "^3.3.3",
+    "react-query": "^3.5.5",
     "steamapi": "^2.1.2"
   },
   "devDependencies": {
@@ -79,7 +79,7 @@
     "markdown-it-prism": "^2.1.3",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
-    "next-pwa": "^5.0.0",
+    "next-pwa": "^5.0.1",
     "next-sitemap": "^1.3.22",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
