add image to blog teasers, update page title spacing

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -29,6 +29,7 @@ collections:
           name: 'comments',
           widget: 'boolean',
           default: true,
+          required: false,
         }
       - {
           label: 'Canonical URL',
