--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,9 @@
 backend:
   name: github
   repo: drewbolles/website # Path to your GitHub repository
+  branch: main
+  base_url: https://api.netlify.com
+  site_domain: https://drewbolles.netlify.app
 media_folder: public/uploads
 public_folder: /uploads
 publish_mode: editorial_workflow
