update lint, test

--- a/package.json
+++ b/package.json
@@ -43,27 +43,28 @@
     "steamapi": "^2.1.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.15.0",
     "@next/bundle-analyzer": "^11.1.2",
     "@octokit/types": "^6.1.1",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/typography": "^0.4.1",
     "@testing-library/cypress": "^8.0.0",
-    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/classnames": "^2.2.11",
     "@types/google.analytics": "^0.0.42",
     "@types/node": "^16.7.10",
     "@types/react": "^17.0.0",
     "@types/webpack-env": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "autoprefixer": "^10.1.0",
     "babel-jest": "^27.1.0",
     "babel-plugin-transform-require-context": "^0.1.1",
     "cypress": "^8.3.1",
     "eslint": "^7.15.0",
     "eslint-plugin-cypress": "^2.11.2",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "front-matter": "^4.0.2",
     "frontmatter-markdown-loader": "^3.6.2",
