--- a/package.json
+++ b/package.json
@@ -34,36 +34,37 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "dayjs": "^1.9.7",
-    "next": "^10.0.4",
+    "next": "^11.1.2",
     "next-seo": "^4.17.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.1.0",
     "react-query": "^3.5.5",
     "steamapi": "^2.1.2"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^10.0.3",
+    "@babel/preset-typescript": "^7.15.0",
+    "@next/bundle-analyzer": "^11.1.2",
     "@octokit/types": "^6.1.1",
     "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/typography": "^0.3.1",
-    "@testing-library/cypress": "^7.0.3",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
+    "@tailwindcss/typography": "^0.4.1",
+    "@testing-library/cypress": "^8.0.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/classnames": "^2.2.11",
-    "@types/google.analytics": "0.0.41",
-    "@types/node": "^14.14.14",
+    "@types/google.analytics": "^0.0.42",
+    "@types/node": "^16.7.10",
     "@types/react": "^17.0.0",
     "@types/webpack-env": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "autoprefixer": "^10.1.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.1.0",
     "babel-plugin-transform-require-context": "^0.1.1",
-    "cypress": "^6.1.0",
+    "cypress": "^8.3.1",
     "eslint": "^7.15.0",
     "eslint-plugin-cypress": "^2.11.2",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "front-matter": "^4.0.2",
     "frontmatter-markdown-loader": "^3.6.2",
@@ -71,8 +72,8 @@
     "identity-obj-proxy": "^3.0.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^8.0.0",
-    "jest": "^26.6.3",
+    "imagemin-svgo": "^9.0.0",
+    "jest": "^27.1.0",
     "jimp": "^0.16.1",
     "lint-staged": "^10.5.3",
     "markdown-it": "^12.0.4",
