--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/google.analytics": "^0.0.42",
     "@types/node": "^16.7.10",
     "@types/react": "^17.0.0",
+    "@types/steamapi": "^2.2.2",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
@@ -88,7 +89,7 @@
     "responsive-loader": "^2.0.0",
     "rss": "^1.2.2",
     "tailwindcss": "^2.0.2",
-    "typescript": "^4.1.3",
+    "typescript": "^4.7.4",
     "webp-loader": "^0.6.0"
   }
 }
