--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "next-optimized-images": "^2.6.2",
     "next-pwa": "^5.0.1",
     "next-sitemap": "^3.1.21",
-    "prettier": "^2.2.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "pretty-quick": "^3.1.0",
     "prismjs": "^1.22.0",
     "responsive-loader": "^2.0.0",
